dnl $Id$
dnl Process this file with autoconf to produce a configure script.
AC_INIT(monitor.c)

dnl Checks for programs.
AC_PROG_CC

CFLAGS=
dnl Checks for header files.
AC_CHECK_HEADERS(net/if_vlan_var.h net/ethernet.h netinet/if_ether.h pcap.h)
case x$ac_cv_header_pcap_h in
  xno)
    AC_CHECK_HEADERS(pcap/pcap.h)
    case x$ac_cv_header_pcap_pcap_h in
      xno)
        AC_MSG_CHECKING(for -I/usr/include/pcap needed for pcap.h)
        OLD_CFLAGS=$CFLAGS
        CFLAGS="$CFLAGS -I/usr/include/pcap"
        AC_TRY_COMPILE([#include <pcap.h>],[],
                       AC_MSG_RESULT(yes); ac_cv_header_pcap_h=yes,
                       AC_MSG_RESULT(no))
        case x$ac_cv_header_pcap_h in
          xno)
            AC_MSG_CHECKING(for -I/usr/contrib/include needed for pcap.h)
            CFLAGS="$OLD_CFLAGS -I/usr/contrib/include"
            AC_TRY_COMPILE([#include <pcap.h>],[],
                       AC_MSG_RESULT(yes); ac_cv_header_pcap_h=yes,
                       AC_MSG_RESULT(no))
            ;;
        esac
        ;;
     esac
     ;;
esac


dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_CHECK_FUNCS(inet_addr)
case x$ac_cv_func_inet_addr in
  xno)
    AC_MSG_CHECKING(for inet_addr in -lxnet)
    OLD_LIBS=$LIBS
    LIBS="$LIBS -lxnet"
    AC_TRY_LINK([#include <arpa/inet.h>],[inet_addr("");],
          AC_MSG_RESULT(yes), AC_MSG_RESULT(no); AC_ERROR(no inet_addr() found))
    ;;
esac

OLD_LIBS=$LIBS
LIBS="$LIBS -lpcap"
AC_MSG_CHECKING(for libpcap)
AC_TRY_LINK([],[pcap_open_live();],AC_MSG_RESULT(yes),
     AC_MSG_RESULT(no); AC_ERROR(no libpcap found))

dnl Check for trunk
AC_ARG_WITH(vlans,
            [  --with-vlans            802.1q vlans support (default no)],
            do_trunk=yes, do_trunk=no)
case x$do_trunk in
  xyes)
    ;;
  *)
    AC_DEFINE(NO_TRUNK)
    ;;
esac

dnl Set dirs
logdir=/var/log/monitor
AC_ARG_WITH(logdir,
     [  --with-logdir=path      log files directory (default /var/log/monitor)],
     [logdir=$withval],[])
AC_DEFINE_UNQUOTED(LOGDIR, "$logdir")

AC_OUTPUT(Makefile)
